# cpp23-mntchocoluvr

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: ClangTools.cmake  Config.cmake.in  ProjectOptions.cmake
include/app/: core.hpp
resources/: app.qrc  app.rc
scripts/: bootstrap.ps1
src/: core.cpp  main.cpp
tests/: core_tests.cpp  string_tests.cpp  test_main.cpp
